--- a/api/package.json
+++ b/api/package.json
@@ -3,12 +3,17 @@
   "version": "0.0.1",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.2.0"
+    "jest": "^29.5.0",
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.30.0",
+    "supertest": "^6.3.3"
   }
 }
