--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "todo-list-api",
   "version": "0.0.1",
   "main": "server.js",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "test": "jest",
     "start": "nodemon server.js"
@@ -9,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
