--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,6 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "description": "Create todo list App in react and typescript ",
-
   "keywords": [
     "typescript",
     "react",
@@ -12,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
