--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "jest-puppeteer-preset": "^7.0.1",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,14 +21,18 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
+    "@types/jest": "^29.5.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "jest": "^27.5.1",
+    "jest-puppeteer": "^8.0.6",
     "typescript": "4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "browserslist": [
